--- a/沧浪之水/沧浪之水.md
+++ b/沧浪之水/沧浪之水.md
@@ -28,3 +28,4 @@
 千百年前，屈原既放，游于江潭，行吟泽畔，颜色憔悴，形容枯槁，长吟对渔父“举世皆浊我独清，众人皆醉我独醒，是以见放。”一番对白，渔父莞尔而笑，鼓枻而去，乃歌曰：“**沧浪之水清兮，可以濯吾缨；沧浪之水浊兮，可以濯吾足。**”遂去，不复与言。
 
 屈原已死，孔子何哉？中国知识分子的命运，何去何从呢？也许当看我们这一代，后一代，再后一代，看沧浪之水，川流不息，荡尽尘埃。
+over
