--- a/沧浪之水/沧浪之水.md
+++ b/沧浪之水/沧浪之水.md
@@ -23,9 +23,9 @@
 
 作为一名大学生，作为一名知识分子，如何回应这些时代命题。《沧浪之水》提出了问题，却没有给出答案。鲁迅在《中国人失掉自信力了吗》说：“我们从古以来，就有埋头苦干的人，有拼命硬干的人，有为民请命的人，有舍身求法的人，……”这些人或许淹没在历史的流沙中无人知晓与铭记，可在今天，他们仍然有着一个响亮的名字“中国的脊梁”。知识分子倘若称不上“中国的脊梁”，便也称不上知识分子一称了。良知和责任感是知识分子在人格上的自我命名，当这种温良消解殆尽，知识分子也不复存在了。我想，知识分子总需要一处作为落脚点，那么这个点应该是人民。知识分子出身于人民，也应将服务于人民，“为天地立心，为生民立命，为往圣继绝学，为万世开太平”也将继续继承下去，成为知识分子的信条。
 
-写道这里，我想起我姐曾告诉我的话，“我现在也像那些资格较老的人一样了，我成为了当初最讨厌的人”。当初，我坐在车后座上听到这话心里一颤，因为无论怎样我心里还是有着那份辜鸿铭老先生说的温良，有着知识分子的理想与抱负。无论将来是像池大为父亲那样恪守知识分子的传统，还是像池大为一样违背本心，我希望所做之事仍然要益于百姓。这样说，或许颇有些“曲线知识分子”的意味，可像池大为一样成为一个真正对人民有益的厅长怕也难许多。
-
-千百年前，屈原既放，游于江潭，行吟泽畔，颜色憔悴，形容枯槁，长吟对渔父“举世皆浊我独清，众人皆醉我独醒，是以见放。”一番对白，渔父莞尔而笑，鼓枻而去，乃歌曰：“**沧浪之水清兮，可以濯吾缨；沧浪之水浊兮，可以濯吾足。**”遂去，不复与言。
+写道这里，我想起我姐曾告诉我的话，“我现在也像那些资格较老的人一样了，我成为了当初最讨厌的人”。当初，我坐在车后座上听到这话心里一颤，因为无论怎样我心里还是有着那份辜鸿铭老先生说的温良，有着知识分子的理想与抱负。无论将来是像池大为父亲那样恪守知识分子的传统，还是像池大为一样违背本心，我希望所做之事仍然要益于百姓。这样说，或许颇有些“曲线知识分子”的意味，可像池大为一样成为一个真正对人民有益的厅长怕也难许多.  
+  
+千百年前，屈原既放，游于江潭，行吟泽畔，颜色憔悴，形容枯槁，长吟对渔父“举世皆浊我独清，众人皆醉我独醒，是以见放。”一番对白，渔父莞尔而笑，鼓枻而去，乃歌曰：“**沧浪之水清兮，可以濯吾缨；沧浪之水浊兮，可以濯吾足。**”遂去，不复与言。  
 
 屈原已死，孔子何哉？中国知识分子的命运，何去何从呢？也许当看我们这一代，后一代，再后一代，看沧浪之水，川流不息，荡尽尘埃。  
 over
